operator/pkg/model/ingestion/testdata/gateway/l4_skips_backends_missing_port/input-tcproute.yaml
- metadata:
    creationTimestamp: null
    name: tcp
    namespace: app-ns
  spec:
    parentRefs:
    - name: platform
      sectionName: tcp
    rules:
    - backendRefs:
      - name: backend
  status:
    parents: null
