operator/pkg/model/ingestion/testdata/gateway/l4_skips_backends_missing_port/input-udproute.yaml
- metadata:
    creationTimestamp: null
    name: udp
    namespace: app-ns
  spec:
    parentRefs:
    - name: platform
      sectionName: udp
    rules:
    - backendRefs:
      - name: backend
  status:
    parents: null
